# MC_Library

./: README.md  pyproject.toml
examples/: composable.py  lookup.py  rectangle.py  shapely_intersection.py
src/polars_mc/: __init__.py  aggregate.py  chunk.py  chunking.py  distributions.py  engine.py  reduce.py  result.py  rng.py  sampling.py  summarize.py
tests/: conftest.py  mp_helpers.py  test_polars_mc.py
