[project]
name = "polars-mc"
version = "0.1.0"
description = "Vectorized Monte Carlo simulation engine on top of Polars: write one chunk-trial, get parallel chunked simulation and merged statistics."
readme = "README.md"
authors = [
    { name = "miyokichi", email = "minminzemi81018@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
